syntax = "proto3";

package message_record;

// import "google/protobuf/timestamp.proto";
import "record.proto";
import "subkey.proto";
import "versioned_bytes.proto";

/**
 * GetRecord
 */
message GetRecordRequest {
  subkey.Subkey subkey = 1; // full address to find
  subkey.SubkeyField field = 2; // which field to route by
}

message GetRecordResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    record.SignedRecord signed_record = 1;
  }

  enum Failure {
    Unknown = 0;
    Invalid = 1;
  }
}

/**
 * PutRecord
 */
message PutRecordRequest {
  subkey.Subkey subkey = 1;
  subkey.SubkeyField field = 2;
  record.SignedRecord signed_record = 3;
}

message PutRecordResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {}

  enum Failure {
    Unknown = 0;
    Invalid = 1;
    InvalidSignature = 2;
  }
}

/**
 * DeleteRecord
 */
message DeleteRecordRequest {
  subkey.Subkey subkey = 1;
  oneof signature {
    versioned_bytes.VersionedBytes signer_signature = 2;
    versioned_bytes.VersionedBytes cosigner_signature = 3;
  }
}

message DeleteRecordResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {}

  enum Failure {
    Unknown = 0;
    Invalid = 1;
  }
}
